@@ -35,6 +35,12 @@
 <div class="document">
 
 
+<p>2021-02-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/svg.c (ProcessStyleClassDefs): Fix non-terminal loop
+caused by a self-referential list which results in huge memory
+usage.  Addresses oss-fuzz 31238 &quot;graphicsmagick:coder_SVG_fuzzer:
+Out-of-memory in coder_SVG_fuzzer&quot;.</blockquote>
 <p>2021-02-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* coders/svg.c (SVGStartElement): Reject impossibly small bounds
